updated and fixed bugs

--- a/views/admin/listProduct.ejs
+++ b/views/admin/listProduct.ejs
@@ -424,7 +424,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" id="addOfferBtn">Add
                             Offer</button>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary close" data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
