--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -670,14 +670,23 @@
                                             setTimeout(() => {
                                                 location.reload();
                                             }, 3000);
-                                        } 
+                                        } else {
+                                                 // Handle errors
+                                                 Swal.fire({
+                                                     title: 'Failed!',
+                                                     text: data.message,
+                                                     icon: 'error',
+                                                 });
+                                             }
                                     })
-                                    .catch(err => {    
+                                    .catch(err => { 
+                                        if (!err.data.success) {   
                                             Swal.fire({
                                                 icon: 'error',
                                                 title: 'Failed',
                                                 text: err.response?.data?.message || "Something went wrong.",
                                             });
+                                        }
                                     });
                             }
 
