--- a/views/admin/listCategories.ejs
+++ b/views/admin/listCategories.ejs
@@ -319,7 +319,7 @@
                     <div id="offerError" class="text-danger" style="display: none; text-align: center;"></div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" id="addOfferBtn">Add Offer</button>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary close" data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
