fixed bug in google login and signup

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -74,7 +74,7 @@
                         <div class="col-lg-2 col-md-3">
                             <h5 class="widget-title wow fadeIn animated">My Account</h5>
                             <ul class="footer-list wow fadeIn animated">
-                                <li><a href="/register">Sign Up</a></li>
+                                <li><a href="/signup">Sign Up</a></li>
                                 <li><a href="/login">Sign In</a></li>
                                 <li><a href="/help">Help</a></li>
                             </ul>
