--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -65,7 +65,7 @@
                                 </li>
                                 <li>
                                     <i class="fi-rs-user"></i>
-                                    <a href="/register">Sign Up</a>
+                                    <a href="/signup">Sign Up</a>
                                 </li>
                                 <% } else { %>
                                     <li>
@@ -691,7 +691,7 @@
                         <a href="/login">Log In</a>
                 </div>
                 <div class="single-mobile-header-info">
-                    <a href="/register">Sign Up</a>
+                    <a href="/signup">Sign Up</a>
                     <% } else { %>
 
 
