--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -848,7 +848,7 @@
                                                 </div>
                                                 <div style="text-align: center; margin-top: 20px;">
                                                     <a class="share-button"
-                                                        href="https://wa.me/?text=Use%20my%20referral%20code%20<%= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20" "encodeURIComponent(http://localhost:3434/register/refer?code=<%= referral.referralCode %>)"
+                                                        href="https://wa.me/?text=Use%20my%20referral%20code%20<%= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20https://threadloom.store/signup/refer?code=<%= referral.referralCode %>"
                                                         style="background-color: #25D366;">
                                                         <i class="fab fa-whatsapp"></i> Share on WhatsApp
                                                     </a>
@@ -872,28 +872,33 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <div class="list-group">
-                                                        <a href="https://wa.me/?text=Use%20my%20referral%20code%20<%#= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20http://localhost:3434/register/refer?code:<%#= referral.referralCode %>"
-                                                            class="list-group-item list-group-item-action">
-                                                            <i class="fab fa-whatsapp"></i> WhatsApp
-                                                        </a>
-                                                        <a href="sms:?body=Use%20my%20referral%20code%20<%#= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20http://localhost:3434/register/refer?code:<%#= referral.referralCode %>"
-                                                            class="list-group-item list-group-item-action">
-                                                            <i class="fas fa-sms"></i> SMS
-                                                        </a>
-                                                        <a href="mailto:?subject=Join%20Threadloom&body=Use%20my%20referral%20code%20<%#= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20http://localhost:3434/register/refer?code:<%#= referral.referralCode %>"
-                                                            class="list-group-item list-group-item-action">
-                                                            <i class="fas fa-envelope"></i> Email
-                                                        </a>
-                                                        <a href="https://www.facebook.com/sharer/sharer.php?u=http://localhost:3434/register/refer?code:<%#= referral.referralCode %>&quote=Use%20my%20referral%20code%20<%#= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!"
-                                                            class="list-group-item list-group-item-action">
-                                                            <i class="fab fa-facebook"></i> Facebook
-                                                        </a>
-                                                        <a href="https://twitter.com/intent/tweet?text=Use%20my%20referral%20code%20<%#= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20http://localhost:3434/register/refer?code:<%#= referral.referralCode %>"
-                                                            class="list-group-item list-group-item-action">
-                                                            <i class="fab fa-twitter"></i> Twitter
-                                                        </a>
+                                                      <a href="https://wa.me/?text=Use%20my%20referral%20code%20<%= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20https://threadloom.store/signup/refer?code=<%= referral.referralCode %>"
+                                                        class="list-group-item list-group-item-action">
+                                                        <i class="fab fa-whatsapp"></i> WhatsApp
+                                                      </a>
+                                                  
+                                                      <a href="sms:?body=Use%20my%20referral%20code%20<%= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20https://threadloom.store/signup/refer?code=<%= referral.referralCode %>"
+                                                        class="list-group-item list-group-item-action">
+                                                        <i class="fas fa-sms"></i> SMS
+                                                      </a>
+                                                  
+                                                      <a href="mailto:?subject=Join%20Threadloom&body=Use%20my%20referral%20code%20<%= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20https://threadloom.store/signup/refer?code=<%= referral.referralCode %>"
+                                                        class="list-group-item list-group-item-action">
+                                                        <i class="fas fa-envelope"></i> Email
+                                                      </a>
+                                                  
+                                                      <a href="https://www.facebook.com/sharer/sharer.php?u=https://threadloom.store/signup/refer?code=<%= referral.referralCode %>&quote=Use%20my%20referral%20code%20<%= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!"
+                                                        class="list-group-item list-group-item-action">
+                                                        <i class="fab fa-facebook"></i> Facebook
+                                                      </a>
+                                                  
+                                                      <a href="https://twitter.com/intent/tweet?text=Use%20my%20referral%20code%20<%= referral.referralCode %>%20to%20sign%20up%20on%20Threadloom%20and%20get%20₹50%20in%20your%20wallet!%20Sign%20up%20here:%20https://threadloom.store/signup/refer?code=<%= referral.referralCode %>"
+                                                        class="list-group-item list-group-item-action">
+                                                        <i class="fab fa-twitter"></i> Twitter
+                                                      </a>
                                                     </div>
-                                                </div>
+                                                  </div>
+                                                  
                                             </div>
                                         </div>
                                     </div>
