update and added contents

--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -21,7 +21,7 @@
 
         <section class="content-main">
             <div class="content-header">
-                <h2 class="content-title card-title">Order List</h2>
+                <h2 class="content-title card-title">Order List (<%= ordersCount %>)</h2>
             </div>
             <div class="card mb-4">
 
