--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -5,7 +5,7 @@
 
         <section class="content-main">
             <div class="content-header">
-                <h2 class="content-title card-title">Sales Report</h2>
+                <h2 class="content-title card-title">Sales Report (<%= totalOrders %>)</h2>
                 <div class="d-flex gap-3">
                     <% if (orders.length> 0) { %>
                         <button id="pdfDownloadBtn" class="btn btn-warning"
