--- a/views/admin/userList.ejs
+++ b/views/admin/userList.ejs
@@ -9,7 +9,7 @@
         <section class="content-main">
             <div class="container">
                 <div class="content-header">
-                    <h2 class="content-title card-title">User Management</h2>
+                    <h2 class="content-title card-title">User Management (<%= totalCount %>)</h2>
                 </div>
                 <div class="card mb-4 shadow-sm">
                     <header class="card-header">
